# opennurbs

./: .gitignore  CMakeLists.txt  README.md  makefile  opennurbs_system_compiler.h
examples/: CMakeLists.txt
examples/example_brep/: CMakeLists.txt  example_brep.cpp
examples/example_convert/: CMakeLists.txt  example_convert.cpp
examples/example_gl/: CMakeLists.txt  example_gl.cpp
examples/example_read/: CMakeLists.txt  example_read.cpp
examples/example_roundtrip/: CMakeLists.txt  example_roundtrip.cpp
examples/example_test/: CMakeLists.txt  example_test.cpp
examples/example_userdata/: CMakeLists.txt  example_ud.cpp  example_userdata.cpp
examples/example_write/: CMakeLists.txt  example_write.cpp
opennurbs/include/: opennurbs_system_compiler.h
opennurbs/src/: opennurbs_statics.cpp  opennurbs_uuid.cpp
